--- a/App/public/manifest.json
+++ b/App/public/manifest.json
@@ -2,13 +2,13 @@
     "name": "Electronic_Stock",
     "icons": [
         {
-            "src": "icon512.png",
+            "src": "/icons/icon512.png",
             "type": "image/png",
             "purpose": "any maskable",
             "sizes": "512x512"
         },
         {
-            "src": "icon192.png",
+            "src": "/icons/icon192.png",
             "type": "image/png",
             "purpose": "any maskable",
             "sizes": "192x192"
