--- a/App/package.json
+++ b/App/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.4.1",
     "vue-router": "^4.0.3",
     "vue3-touch-events": "^4.1.3",
     "vuetify": "^3.0.0-beta.0",
