--- a/App/package.json
+++ b/App/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-i18n": "^9.4.1",
