--- a/App/public/manifest.json
+++ b/App/public/manifest.json
@@ -4,14 +4,14 @@
     "theme_color": "#212121",
     "icons": [
         {
-            "src": "/icons/icon512.png",
-            "type": "image/png",
+            "src": "/icons/icon512.webp",
+            "type": "image/webp",
             "purpose": "any maskable",
             "sizes": "512x512"
         },
         {
-            "src": "/icons/icon192.png",
-            "type": "image/png",
+            "src": "/icons/icon192.webp",
+            "type": "image/webp",
             "purpose": "any maskable",
             "sizes": "192x192"
         }
