--- a/App/package.json
+++ b/App/package.json
@@ -28,6 +28,7 @@
     "sass-loader": "^12.0.0",
     "url-loader": "^4.1.1",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-dev-middleware": "^5.3.4",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
